Fix : style footer and loader

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     />
   </head>
   <body>
-    <!-- <div id="loader-container">
+    <div id="loader-container">
       <div class="dot d1"></div>
       <div class="dot d2"></div>
       <div class="dot d3"></div>
-    </div> -->
+    </div>
     <header class="center column">
       <img
         src="assets\logo\ohmyfood.png"
@@ -38,12 +38,14 @@
     <main>
       <section id="section_info" class="padding_section backGris">
         <div class="section_textReservation center column">
-          <h1>Réservez le menu qui vous convient</h1>
-          <p>
+          <h1 class="size_40">Réservez le menu qui vous convient</h1>
+          <p class="size_18">
             Découvrez des restaurants d'exception, sélectionnés par nos soins
           </p>
           <a href="#restaurants">
-            <button class="button_rose bold colorWhite backRose noBorder">
+            <button
+              class="button_rose bold colorWhite backRose noBorder size_16"
+            >
               Explorez nos restaurants
             </button>
           </a>
