--- a/restaurants/menu4.html
+++ b/restaurants/menu4.html
@@ -185,7 +185,7 @@
           <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire
         </li>
         <li class="footer_link">Mentions légales</li>
-        <a href="safa.sellam@outlook.fr" class="contacts">Contact</a>
+        <a href="mailto:safa.sellam@outlook.fr" class="contacts">Contact</a>
       </ul>
     </footer>
   </body>
