add : test elipsis

--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -50,11 +50,11 @@
         </div>
         <div class="details_menu delay_1">
           <h2 class="light"><span class="title_underline">ENTR</span>EES</h2>
-          <div class="menu_card--container column backWhite">
-            <h3 class="title_padding elipsis">Fricassée d'escargots</h3>
+          <div class="menu_card--container column backWhite elipsis">
+            <h3 class="title_padding">Fricassée d'escargots</h3>
 
             <div class="container_text row between">
-              <p class="elipsis">Au piment d'Espelette</p>
+              <p>Au piment d'Espelette</p>
               <div class="price-container">
                 <p class="price bold">25€</p>
               </div>
@@ -63,7 +63,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Foie gras de canard mi-cuit</h3>
             <div class="container_text row between">
               <p>Et ses copeaux de truffe noire</p>
@@ -75,7 +75,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Œuf au plat</h3>
             <div class="container_text row between">
               <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -91,7 +91,7 @@
         <div class="details_menu delay_2">
           <h2 class="light"><span class="title_underline">PLAT</span>S</h2>
 
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Filet de bœuf aux herbes</h3>
             <div class="container_text row between">
               <p>Accompagné de sa ribambelle de légumes</p>
@@ -115,7 +115,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Filet de turbot</h3>
             <div class="container_text row between">
               <p>Aux agrumes</p>
@@ -130,7 +130,7 @@
         </div>
         <div class="details_menu delay_3">
           <h2 class="light"><span class="title_underline">DESS</span>ERTS</h2>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Paris-Brest</h3>
             <div class="container_text row between">
               <p>Revisité</p>
@@ -142,7 +142,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Macaron au chocolat d'exception</h3>
             <div class="container_text row between">
               <p>Et glace à la vanille de Madagascar</p>
@@ -154,7 +154,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Mousse au chocolat</h3>
             <div class="container_text row between">
               <p>Au piment d'Espelette et à la truffe noire</p>
