--- a/restaurants/menu2.html
+++ b/restaurants/menu2.html
@@ -50,7 +50,7 @@
         </div>
         <div class="details_menu delay_1">
           <h2 class="light"><span class="title_underline">ENTR</span>EES</h2>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Tartare de thon</h3>
 
             <div class="container_text row between">
@@ -63,7 +63,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Bouchée de homard croustillant</h3>
             <div class="container_text row between">
               <p>Et sa farandole de petits légumes</p>
@@ -75,7 +75,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Velouté de cèpes</h3>
             <div class="container_text row between">
               <p>Aux truffesr</p>
@@ -91,7 +91,7 @@
         <div class="details_menu delay_2">
           <h2 class="light"><span class="title_underline">PLAT</span>S</h2>
 
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Poulet rôti aux herbes de Provence</h3>
             <div class="container_text row between">
               <p>Et sa crème de truffes</p>
@@ -103,7 +103,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Langouste rôtie</h3>
             <div class="container_text row between">
               <p>Et ses légumes de saison</p>
@@ -115,7 +115,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Côte de bœuf Angus</h3>
             <div class="container_text row between">
               <p>Et sa purée de panais</p>
@@ -130,7 +130,7 @@
         </div>
         <div class="details_menu delay_3">
           <h2 class="light"><span class="title_underline">DESS</span>ERTS</h2>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Farandole de desserts</h3>
             <div class="container_text row between">
               <p>Du chef</p>
@@ -142,7 +142,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Crème brulée</h3>
             <div class="container_text row between">
               <p>Revisitée</p>
@@ -154,7 +154,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Tiramisu</h3>
             <div class="container_text row between">
               <p>À la noisette</p>
