--- a/restaurants/menu3.html
+++ b/restaurants/menu3.html
@@ -50,7 +50,7 @@
         </div>
         <div class="details_menu delay_1">
           <h2 class="light"><span class="title_underline">ENTR</span>EES</h2>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Ravioles de foie gras</h3>
 
             <div class="container_text row between">
@@ -63,7 +63,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Caviar osciètre</h3>
             <div class="container_text row between">
               <p>Sur blini à la farine de blé noir</p>
@@ -75,7 +75,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Homard et espuma de potiron</h3>
             <div class="container_text row between">
               <p>Marinés aux zestes d'orange</p>
@@ -87,7 +87,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Foie gras de canard cuit entier</h3>
             <div class="container_text row between">
               <p>Confiture de figue et pain toastée</p>
@@ -103,7 +103,7 @@
         <div class="details_menu delay_2">
           <h2 class="light"><span class="title_underline">PLAT</span>S</h2>
 
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Noix de coquilles Saint-Jacques</h3>
             <div class="container_text row between">
               <p>Sur lit de purée de céleri-rave</p>
@@ -115,7 +115,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Langoustine poêlée</h3>
             <div class="container_text row between">
               <p>Purée de patate douce</p>
@@ -127,7 +127,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Mijoté de queue de bœuf</h3>
             <div class="container_text row between">
               <p>Et riz sauvage aux zestes de citron</p>
@@ -142,7 +142,7 @@
         </div>
         <div class="details_menu delay_3">
           <h2 class="light"><span class="title_underline">DESS</span>ERTS</h2>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Macaron noisette et chocolat</h3>
             <div class="container_text row between">
               <p>Glace au caramel brun et sel de Guérande</p>
@@ -154,7 +154,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Baba au rhum revisité</h3>
             <div class="container_text row between">
               <p>Avec son coulis de citron</p>
@@ -166,7 +166,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Tarte au citron meringuée</h3>
             <div class="container_text row between">
               <p>Déstructurée</p>
