--- a/restaurants/menu4.html
+++ b/restaurants/menu4.html
@@ -50,7 +50,7 @@
         </div>
         <div class="details_menu delay_1">
           <h2 class="light"><span class="title_underline">ENTR</span>EES</h2>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Tartare de poulpe acidulé</h3>
 
             <div class="container_text row between">
@@ -63,7 +63,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Velouté de légumes d'antan</h3>
             <div class="container_text row between">
               <p>Carotte, panais, topinambour</p>
@@ -75,7 +75,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Soupe à l'oignon</h3>
             <div class="container_text row between">
               <p>Revisitée</p>
@@ -91,7 +91,7 @@
         <div class="details_menu delay_2">
           <h2 class="light"><span class="title_underline">PLAT</span>S</h2>
 
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Coquilles Saint-Jacques</h3>
             <div class="container_text row between">
               <p>Accompagnées d'une purée de panais</p>
@@ -103,7 +103,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Magret de canard</h3>
             <div class="container_text row between">
               <p>Et parmentier de pommes de terre</p>
@@ -115,7 +115,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Pigeonneau d’Ille-et-Vilaine</h3>
             <div class="container_text row between">
               <p>Sur son lit de gnocchis aux légumes</p>
@@ -130,7 +130,7 @@
         </div>
         <div class="details_menu delay_3">
           <h2 class="light"><span class="title_underline">DESS</span>ERTS</h2>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Pétales de violettes glacés</h3>
             <div class="container_text row between">
               <p>Et purée de noisettes</p>
@@ -142,7 +142,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Fondant au chocolat</h3>
             <div class="container_text row between">
               <p>Revisité</p>
@@ -154,7 +154,7 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container column backWhite">
+          <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Millefeuille croustillant</h3>
             <div class="container_text row between">
               <p>Myrtilles et pâte d’amandenoire</p>
