Fix : elispsis effect on card menu

--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -54,7 +54,7 @@
             <h3 class="title_padding">Fricassée d'escargots</h3>
 
             <div class="container_text row between">
-              <p>Au piment d'Espelette</p>
+              <p class="text_elipsis">Au piment d'Espelette</p>
               <div class="price-container">
                 <p class="price bold">25€</p>
               </div>
@@ -66,7 +66,7 @@
           <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Foie gras de canard mi-cuit</h3>
             <div class="container_text row between">
-              <p>Et ses copeaux de truffe noire</p>
+              <p class="text_elipsis">Et ses copeaux de truffe noire</p>
               <div class="price-container">
                 <p class="price bold">35€</p>
               </div>
@@ -78,7 +78,9 @@
           <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Œuf au plat</h3>
             <div class="container_text row between">
-              <p>Assaisonné à la truffe sur lit de caviar</p>
+              <p class="text_elipsis">
+                Assaisonné à la truffe sur lit de caviar
+              </p>
               <div class="price-container">
                 <p class="price bold">20€</p>
               </div>
@@ -94,7 +96,7 @@
           <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Filet de bœuf aux herbes</h3>
             <div class="container_text row between">
-              <p>Accompagné de sa ribambelle de légumes</p>
+              <p class="text_elipsis">Accompagné de sa ribambelle de légumes</p>
               <div class="price-container">
                 <p class="price bold">40€</p>
               </div>
@@ -106,7 +108,9 @@
           <div class="menu_card--container column backWhite">
             <h3 class="title_padding">Parmentier de queue de bœuf</h3>
             <div class="container_text row between">
-              <p>À la truffe noire sur sa purée de panais</p>
+              <p class="text_elipsis">
+                À la truffe noire sur sa purée de panais
+              </p>
               <div class="price-container">
                 <p class="price bold">35€</p>
               </div>
@@ -118,7 +122,7 @@
           <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Filet de turbot</h3>
             <div class="container_text row between">
-              <p>Aux agrumes</p>
+              <p class="text_elipsis">Aux agrumes</p>
               <div class="price-container">
                 <p class="price bold">44€</p>
               </div>
@@ -133,7 +137,7 @@
           <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Paris-Brest</h3>
             <div class="container_text row between">
-              <p>Revisité</p>
+              <p class="text_elipsis">Revisité</p>
               <div class="price-container">
                 <p class="price bold">18€</p>
               </div>
@@ -145,7 +149,7 @@
           <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Macaron au chocolat d'exception</h3>
             <div class="container_text row between">
-              <p>Et glace à la vanille de Madagascar</p>
+              <p class="text_elipsis">Et glace à la vanille de Madagascar</p>
               <div class="price-container">
                 <p class="price bold">22€</p>
               </div>
@@ -157,7 +161,9 @@
           <div class="menu_card--container column backWhite elipsis">
             <h3 class="title_padding">Mousse au chocolat</h3>
             <div class="container_text row between">
-              <p>Au piment d'Espelette et à la truffe noire</p>
+              <p class="text_elipsis">
+                Au piment d'Espelette et à la truffe noire
+              </p>
               <div class="price-container">
                 <p class="price bold">23€</p>
               </div>
