--- a/restaurants/menu2.html
+++ b/restaurants/menu2.html
@@ -50,11 +50,11 @@
         </div>
         <div class="details_menu delay_1">
           <h2 class="light"><span class="title_underline">ENTR</span>EES</h2>
-          <div class="menu_card--container elipsis column backWhite">
+          <div class="menu_card--container column backWhite">
             <h3 class="title_padding">Tartare de thon</h3>
 
             <div class="container_text row between">
-              <p>Assaisonné au yuzu</p>
+              <p class="text_elipsis">Assaisonné au yuzu</p>
               <div class="price-container">
                 <p class="price bold">25€</p>
               </div>
@@ -63,10 +63,10 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container elipsis column backWhite">
+          <div class="menu_card--container column backWhite">
             <h3 class="title_padding">Bouchée de homard croustillant</h3>
             <div class="container_text row between">
-              <p>Et sa farandole de petits légumes</p>
+              <p class="text_elipsis">Et sa farandole de petits légumes</p>
               <div class="price-container">
                 <p class="price bold">35€</p>
               </div>
@@ -75,10 +75,10 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container elipsis column backWhite">
+          <div class="menu_card--container column backWhite">
             <h3 class="title_padding">Velouté de cèpes</h3>
             <div class="container_text row between">
-              <p>Aux truffesr</p>
+              <p class="text_elipsis">Aux truffesr</p>
               <div class="price-container">
                 <p class="price bold">20€</p>
               </div>
@@ -91,10 +91,10 @@
         <div class="details_menu delay_2">
           <h2 class="light"><span class="title_underline">PLAT</span>S</h2>
 
-          <div class="menu_card--container elipsis column backWhite">
+          <div class="menu_card--container column backWhite">
             <h3 class="title_padding">Poulet rôti aux herbes de Provence</h3>
             <div class="container_text row between">
-              <p>Et sa crème de truffes</p>
+              <p class="text_elipsis">Et sa crème de truffes</p>
               <div class="price-container">
                 <p class="price bold">40€</p>
               </div>
@@ -103,10 +103,10 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container elipsis column backWhite">
+          <div class="menu_card--container column backWhite">
             <h3 class="title_padding">Langouste rôtie</h3>
             <div class="container_text row between">
-              <p>Et ses légumes de saison</p>
+              <p class="text_elipsis">Et ses légumes de saison</p>
               <div class="price-container">
                 <p class="price bold">35€</p>
               </div>
@@ -115,10 +115,10 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container elipsis column backWhite">
+          <div class="menu_card--container column backWhite">
             <h3 class="title_padding">Côte de bœuf Angus</h3>
             <div class="container_text row between">
-              <p>Et sa purée de panais</p>
+              <p class="text_elipsis">Et sa purée de panais</p>
               <div class="price-container">
                 <p class="price bold">44€</p>
               </div>
@@ -130,10 +130,10 @@
         </div>
         <div class="details_menu delay_3">
           <h2 class="light"><span class="title_underline">DESS</span>ERTS</h2>
-          <div class="menu_card--container elipsis column backWhite">
+          <div class="menu_card--container column backWhite">
             <h3 class="title_padding">Farandole de desserts</h3>
             <div class="container_text row between">
-              <p>Du chef</p>
+              <p class="text_elipsis">Du chef</p>
               <div class="price-container">
                 <p class="price bold">18€</p>
               </div>
@@ -142,10 +142,10 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container elipsis column backWhite">
+          <div class="menu_card--container column backWhite">
             <h3 class="title_padding">Crème brulée</h3>
             <div class="container_text row between">
-              <p>Revisitée</p>
+              <p class="text_elipsis">Revisitée</p>
               <div class="price-container">
                 <p class="price bold">22€</p>
               </div>
@@ -154,10 +154,10 @@
               <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
-          <div class="menu_card--container elipsis column backWhite">
+          <div class="menu_card--container column backWhite">
             <h3 class="title_padding">Tiramisu</h3>
             <div class="container_text row between">
-              <p>À la noisette</p>
+              <p class="text_elipsis">À la noisette</p>
               <div class="price-container">
                 <p class="price bold">23€</p>
               </div>
