--- a/restaurants/menu4.html
+++ b/restaurants/menu4.html
@@ -54,7 +54,7 @@
             <h3 class="title_padding">Tartare de poulpe acidulé</h3>
 
             <div class="container_text row between">
-              <p>Aux zestes d'orange</p>
+              <p class="text_elipsis">Aux zestes d'orange</p>
               <div class="price-container">
                 <p class="price bold">25€</p>
               </div>
@@ -66,7 +66,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Velouté de légumes d'antan</h3>
             <div class="container_text row between">
-              <p>Carotte, panais, topinambour</p>
+              <p class="text_elipsis">Carotte, panais, topinambour</p>
               <div class="price-container">
                 <p class="price bold">35€</p>
               </div>
@@ -78,7 +78,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Soupe à l'oignon</h3>
             <div class="container_text row between">
-              <p>Revisitée</p>
+              <p class="text_elipsis">Revisitée</p>
               <div class="price-container">
                 <p class="price bold">20€</p>
               </div>
@@ -94,7 +94,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Coquilles Saint-Jacques</h3>
             <div class="container_text row between">
-              <p>Accompagnées d'une purée de panais</p>
+              <p class="text_elipsis">Accompagnées d'une purée de panais</p>
               <div class="price-container">
                 <p class="price bold">40€</p>
               </div>
@@ -106,7 +106,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Magret de canard</h3>
             <div class="container_text row between">
-              <p>Et parmentier de pommes de terre</p>
+              <p class="text_elipsis">Et parmentier de pommes de terre</p>
               <div class="price-container">
                 <p class="price bold">35€</p>
               </div>
@@ -118,7 +118,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Pigeonneau d’Ille-et-Vilaine</h3>
             <div class="container_text row between">
-              <p>Sur son lit de gnocchis aux légumes</p>
+              <p class="text_elipsis">Sur son lit de gnocchis aux légumes</p>
               <div class="price-container">
                 <p class="price bold">44€</p>
               </div>
@@ -133,7 +133,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Pétales de violettes glacés</h3>
             <div class="container_text row between">
-              <p>Et purée de noisettes</p>
+              <p class="text_elipsis">Et purée de noisettes</p>
               <div class="price-container">
                 <p class="price bold">18€</p>
               </div>
@@ -145,7 +145,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Fondant au chocolat</h3>
             <div class="container_text row between">
-              <p>Revisité</p>
+              <p class="text_elipsis">Revisité</p>
               <div class="price-container">
                 <p class="price bold">22€</p>
               </div>
@@ -157,7 +157,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Millefeuille croustillant</h3>
             <div class="container_text row between">
-              <p>Myrtilles et pâte d’amandenoire</p>
+              <p class="text_elipsis">Myrtilles et pâte d’amandenoire</p>
               <div class="price-container">
                 <p class="price bold">23€</p>
               </div>
