--- a/restaurants/menu3.html
+++ b/restaurants/menu3.html
@@ -54,7 +54,7 @@
             <h3 class="title_padding">Ravioles de foie gras</h3>
 
             <div class="container_text row between">
-              <p>Accompagnées de leur crème à la truffe</p>
+              <p class="text_elipsis">Accompagnées de leur crème à la truffe</p>
               <div class="price-container">
                 <p class="price bold">25€</p>
               </div>
@@ -66,7 +66,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Caviar osciètre</h3>
             <div class="container_text row between">
-              <p>Sur blini à la farine de blé noir</p>
+              <p class="text_elipsis">Sur blini à la farine de blé noir</p>
               <div class="price-container">
                 <p class="price bold">35€</p>
               </div>
@@ -78,7 +78,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Homard et espuma de potiron</h3>
             <div class="container_text row between">
-              <p>Marinés aux zestes d'orange</p>
+              <p class="text_elipsis">Marinés aux zestes d'orange</p>
               <div class="price-container">
                 <p class="price bold">20€</p>
               </div>
@@ -90,7 +90,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Foie gras de canard cuit entier</h3>
             <div class="container_text row between">
-              <p>Confiture de figue et pain toastée</p>
+              <p class="text_elipsis">Confiture de figue et pain toastée</p>
               <div class="price-container">
                 <p class="price bold">35€</p>
               </div>
@@ -106,7 +106,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Noix de coquilles Saint-Jacques</h3>
             <div class="container_text row between">
-              <p>Sur lit de purée de céleri-rave</p>
+              <p class="text_elipsis">Sur lit de purée de céleri-rave</p>
               <div class="price-container">
                 <p class="price bold">40€</p>
               </div>
@@ -118,7 +118,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Langoustine poêlée</h3>
             <div class="container_text row between">
-              <p>Purée de patate douce</p>
+              <p class="text_elipsis">Purée de patate douce</p>
               <div class="price-container">
                 <p class="price bold">35€</p>
               </div>
@@ -130,7 +130,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Mijoté de queue de bœuf</h3>
             <div class="container_text row between">
-              <p>Et riz sauvage aux zestes de citron</p>
+              <p class="text_elipsis">Et riz sauvage aux zestes de citron</p>
               <div class="price-container">
                 <p class="price bold">44€</p>
               </div>
@@ -145,7 +145,9 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Macaron noisette et chocolat</h3>
             <div class="container_text row between">
-              <p>Glace au caramel brun et sel de Guérande</p>
+              <p class="text_elipsis">
+                Glace au caramel brun et sel de Guérande
+              </p>
               <div class="price-container">
                 <p class="price bold">18€</p>
               </div>
@@ -157,7 +159,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Baba au rhum revisité</h3>
             <div class="container_text row between">
-              <p>Avec son coulis de citron</p>
+              <p class="text_elipsis">Avec son coulis de citron</p>
               <div class="price-container">
                 <p class="price bold">22€</p>
               </div>
@@ -169,7 +171,7 @@
           <div class="menu_card--container elipsis column backWhite">
             <h3 class="title_padding">Tarte au citron meringuée</h3>
             <div class="container_text row between">
-              <p>Déstructurée</p>
+              <p class="text_elipsis">Déstructurée</p>
               <div class="price-container">
                 <p class="price bold">23€</p>
               </div>
