Fix : add input for location

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       />
       <div class="header_infoMenu center">
         <i class="fa-solid fa-location-dot"></i>
-        <p class="header_menuLocation">Paris,Belleville</p>
+        <input class="header_menuLocation" placeholder="Paris,Belleville" />
       </div>
     </header>
     <main>
